✅Added another image

--- a/components/posts/learn-a-language-with-a-teacher.mdx
+++ b/components/posts/learn-a-language-with-a-teacher.mdx
@@ -41,13 +41,11 @@ Learning a language should be an enjoyable adventure. Here are ways to keep your
 **Bonus Tip:** **Focus on high-frequency vocabulary.** **Ready to embark on your language learning journey?** Visit Zetta School today and unlock a world of possibilities!
 
 #learn_a_language_quickly #online_language_courses #language_learning_tips #immersion #communication #ZettaSchool
-""",
 
-    "free_affordable_resources.mdx": """
 
 # Are there any free or affordable language learning resources?
 
-![alt_text](images/image2.png 'image_tooltip')
+![alt_text](/images/image2.png 'image_tooltip')
 
 ## Free and Affordable Language Learning Resources
 
